# college-data-pipeline

./: .gitignore  README.md  enqueue_batches.py  main.py  pyproject.toml  requirements.txt  run_pipeline.py  worker.py
config/: settings.py  state_mapping.json
logs/transform_logs/: README.md
pipeline/: batch_manager.py  enricher.py  logger.py  saver.py  transformer.py
queue/: job_queue.py  retry.py  worker_pool.py
